# opentelemetry-php-ext

./: .gitignore  .gitmodules  CMakeLists.txt  CREDITS  README.md  build.sh  build_docker.sh  config.m4  config.w32  opentelemetry.cc  opentelemetry.ini  opentelemetry.php  php_opentelemetry.h
docker/: Dockerfile
examples/: otel-config.yaml
include/: Timer.h  core.h  hex.h  otel_exporter.h  provider.h  sdk.h  utils.h  zend_hook.h  zend_hook_curl.h  zend_hook_error.h  zend_hook_exception.h  zend_hook_memcached.h  zend_hook_mysqli.h  zend_hook_pdo.h  zend_hook_pdo_statement.h  zend_hook_redis.h  zend_hook_yar.h
src/: Timer.cc  core.cc  hex.cc  otel_exporter.cc  provider.cc  sdk.cc  utils.cc  zend_hook.cc  zend_hook_curl.cc  zend_hook_error.cc  zend_hook_exception.cc  zend_hook_memcached.cc  zend_hook_mysqli.cc  zend_hook_pdo.cc  zend_hook_pdo_statement.cc  zend_hook_redis.cc  zend_hook_yar.cc
tests/: 001.phpt
